--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^28.1.7",
-    "@types/node": "^18.7.9",
-    "@types/react": "^18.0.17",
+    "@types/jest": "^29.0.2",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "gh-pages": "^4.0.0",
+    "npm-check-updates": "^16.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-obfuscate-email": "^1.0.16",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.8.3",
+    "web-vitals": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
