--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^4.0.0",
     "npm-check-updates": "^16.1.2",
     "react": "^18.2.0",
+    "react-build-info": "^0.0.3",
     "react-dom": "^18.2.0",
     "react-obfuscate-email": "^1.0.16",
     "react-scripts": "^5.0.1",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm version patch && react-build-info && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
