--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hpn",
   "homepage": "https://sprvgt.github.io/homepage-next",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,7 +22,7 @@
     "web-vitals": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm version patch && react-build-info && react-scripts start",
     "build": "npm version patch && react-build-info && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
